--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -2,7 +2,7 @@ name: C/C++ CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main" ,"test_build_action"]
   pull_request:
     branches: [ "main" ]
 
@@ -18,4 +18,4 @@ jobs:
     - uses: actions/checkout@v3
     - run: mkdir ./build && cmake -B ./build
     - name: make 
-      run: make -C ./build
+    - run: make -C ./build
