--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -12,10 +12,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Install dependencies
-    - run: pip install GitPython colorama
-    - run: arm-none-eabi-gcc --version
     - uses: actions/checkout@v3
+    - name: Install dependencies
+      run: pip install GitPython colorama
+    - run: arm-none-eabi-gcc --version
     - run: mkdir ./build && cmake -B ./build
     - name: make 
     - run: make -C ./build
