--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,7 +15,9 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install dependencies
       run: pip install GitPython colorama
-    - run: arm-none-eabi-gcc --version
-    - run: mkdir ./build && cmake -B ./build
+    - name: check compiler version
+      run: arm-none-eabi-gcc --version
+    - name: "Invoke Cmake"
+      run: mkdir ./build && cmake -B ./build
     - name: make 
-    - run: make -C ./build
+      run: make -C ./build
