--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,6 +15,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install dependencies
       run: pip install GitPython colorama
+    - name: Install compiler
+      run: apt install arm-none-eabi-gcc
     - name: check compiler version
       run: arm-none-eabi-gcc --version
     - name: "Invoke Cmake"
