--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,7 +72,7 @@ target_compile_options(${LIBRARY} PUBLIC
   $<$<COMPILE_LANGUAGE:CXX>:-fno-rtti>
 
   -Wno-psabi
-  -specs=/usr/lib/arm-none-eabi/lib/nosys.specs
+  -specs=nosys.specs
 )
 
 target_include_directories(${LIBRARY} PUBLIC
