--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -8,14 +8,16 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+    strategy:
+    matrix:
+      config:[Debug, Release]
 
     steps:
-    - uses: actions/checkout@v3
-    - uses: carlosperate/arm-none-eabi-gcc-action@v1
-    - run: arm-none-eabi-gcc --version
-    - name: Install dependencies
-      run: pip install GitPython colorama
-    - name: "Invoke Cmake"
-      run: python3 tools/build.py -eth ON -t NUCLEO -bb Debug
+      - uses: actions/checkout@v3
+      - uses: carlosperate/arm-none-eabi-gcc-action@v1
+      - run: arm-none-eabi-gcc --version
+      - name: Install dependencies
+        run: pip install GitPython colorama
+      - name: "Invoke Cmake"
+        run: python3 tools/build.py -eth ON -t NUCLEO -bb ${{ matrix.config}}
