--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -20,5 +20,13 @@ jobs:
       - run: arm-none-eabi-gcc --version
       - name: Install dependencies
         run: pip install GitPython colorama
+      - name: Set up ST-LIB
+        run:  mkdir /opt/
+      - run: |
+          ls /opt/
+      - name: configure
+        run: cp -r ../* /opt/
+      - run: ls ..
+        working-directory: /opt/ST-LIB/tools
       - name: "Invoking python"
-        run: python3 tools/build.py -eth ON -t NUCLEO -bb ${{matrix.build_type}}
+        run: python3 build.py -eth ON -t NUCLEO -bb ${{matrix.build_type}}
