--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -5,6 +5,7 @@ on:
     branches: [ "main" ,"development"]
   pull_request:
     branches: [ "main","development" ]
+    types: [opened]
 
 jobs:
   build:
