Add Release with Debug info compilation mode

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,9 +23,12 @@ else()
   add_definitions(-DHSE_VALUE=25000000)
 endif()
 
-if(${RELEASE})
+if(${RELEASE} STREQUAL "Release")
   set(OPTIMIZATION -O3)
   set(DEBUG_CONFIGURATION -g0)
+elseif(${RELEASE} STREQUAL "ReleaseDebug")
+  set(OPTIMIZATION -O3)
+  set(DEBUG_CONFIGURATION -g3)
 else()
   set(OPTIMIZATION -O0)
   set(DEBUG_CONFIGURATION -g3)
@@ -38,10 +41,12 @@ if(${ETHERNET})
 else()
 message(STATUS "ETHERNET is DISABLED ")
 endif()
-message(STATUS "[DEBUG, RELEASE]:")
+message(STATUS "[DEBUG, RELEASE, RELEASE_DEBUG]:")
 
-if(${RELEASE})
+if(${RELEASE} STREQUAL "Release")
   message( "\tRELEASE")
+elseif(${RELEASE} STREQUAL "ReleaseDebug")
+  message( "\tRELEASE_DEBUG")
 else()
   message( "\tDEBUG")
 endif()
